@@ -17,6 +17,8 @@ Edit-commands suffixed "-bol" dropped
   - py-kill-indent
   - py-mark-indent
   - py-comment-indent
+  - py-shift-indent-left
+  - py-shift-indent-right
 
 - Make $PYTHONPATH configurable from Emacs
   Emacs doesn't read settings from .bashrc
